# friction_dynamics

./: .gitignore  CMakeLists.txt  build.bat  main_old.cpp  plot.py  poincare.bat  readme.md  todo.md
inputfiles/: hertzratesine.txt  input_goals.txt
python/: compare_N_slip.py  compare_blocks.py  compare_chaos.py  compare_chaos_fft.py  compare_del.py  compare_loops.py  compare_stickslip.py  compare_trans.py  compare_xi.py  fft_displacement_amplitude.py  fft_slip.py  multi_poincare.py  plot_3d_vs_intersection.py  plot_Nblocks_phase.py  plot_displacement_amplitude.py  plot_evolved_fretting_loop.py  plot_fretting_loop.py  plot_fretting_loop_mean.py  plot_fretting_map.py  plot_intersections.py  plot_phase.py  plot_phase_and_slip.py  plot_shear.py  poincare.py
python/standalone/: onedof_rateweakening_poincare.py
src/: CMakeLists.txt  data_structures.hpp  input.cpp  input.hpp  integrators.cpp  integrators.hpp  main.cpp  multi_rate_sine.cpp  multi_rate_sine.hpp  ode.hpp  output.hpp  single.cpp  single.hpp  single_rate.cpp  single_rate.hpp  single_rate_sine.cpp  single_rate_sine.hpp  utilities.hpp
